--- a/task1.3.ipynb
+++ b/task1.3.ipynb
@@ -29,9 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Python Programming!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Welcome to Python Programming!')"
    ]
@@ -64,7 +72,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The job was done."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,7 +105,28 @@
     "4. Notice how the arithmetical result appears.\n",
     "5. Move the cell to some other place in the notebook.\n",
     "\n",
+    "\n",
     "**<a id=\"#\">Task 1.3.7.</a>** Return to your assignment sheet when you feel like you have gotten an idea of how notebooks work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+3"
    ]
   }
  ],
