--- a/task3.ipynb
+++ b/task3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -68,21 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def meanfilter(img, size):\n",
-    "    result = numpy.zeros(img.shape)\n",
+    "    img_filtered = numpy.zeros(img.shape)\n",
     "    n = (size - 1) // 2\n",
     "    for p in numpy.ndindex(img.shape):\n",
-    "        neighborhood_sum = 0\n",
-    "        for q in numpy.ndindex(size, size):\n",
-    "            x,y = p[0] - n + q[0], p[1] - n + q[1]\n",
-    "            if 0 <= x < img.shape[0] and 0 <= y < img.shape[1]:\n",
-    "                neighborhood_sum += img[x,y]\n",
-    "        result = neighborhood_sum / (size*size)\n",
-    "    return result"
+    "        if n <= p[0] < img.shape[0] - n and n <= p[1] < img.shape[1] -n:\n",
+    "            neighborhood_sum = 0\n",
+    "            for q in numpy.ndindex(size, size):\n",
+    "                neighborhood_sum += img[p[0] + q[0] -n, p[1] + q[1] -n]\n",
+    "            img_filtered[p[0], p[1]] = neighborhood_sum / size ** 2\n",
+    "    return img_filtered"
    ]
   },
   {
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -158,11 +157,11 @@
     }
    ],
    "source": [
-    "imglenacop2 = imglena.copy()\n",
-    "meanfilter(imglenacop2, 5)\n",
-    "plt.imshow(imglenacop2, \"gray\")\n",
+    "imglenacop2 = meanfilter(imglena.copy(), 5) \n",
+    "\n",
     "lenameanfilter5 = plt.imread(\"data/lena_meanfilter5.png\")\n",
-    "plt.imshow(lenameanfilter5, \"gray\")"
+    "\n",
+    "assert numpy.allclose(imglenacop2, lenameanfilter5, atol=1/255)"
    ]
   },
   {
